# Aurik_10.0.8

./: .bandit  .coveragerc  .editorconfig  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  Ablaufdiagramm.mmd  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  TRADEMARK.md  _aurik_run_excellence.py  _check_imports.py  _check_modules.py  batch_processor.py  conftest.py  debug_launch.sh  error_guard_gaps.json  gpu_capabilities.json  pyproject.toml  pyrightconfig.json  pytest.ini  run_aurik.sh  run_tests_safe.sh  start_aurik_90.py
.github/: FUNDING.yml  GEBOTE.md  GEBOTEN.md  GOVERNANCE.md  ISSUE_MANAGEMENT.md  LABELS.md  VERBOTEN.md  copilot-instructions-v5-full.md  copilot-instructions.md  pull_request_template.md
.tmp_test_runs/: summary.tsv
Aurik10/: __init__.py  main.py
Aurik910/: Aurik910.spec  README_PREMIUM_GUI.md  __init__.py  main.py
analysis_results/: analysis_Elke Best - Du wolltest nur ein Abenteuer, aber ich suchte einen Freund_restoration_1777893009.json  analysis_Elke Best - Du wolltest nur ein Abenteuer, aber ich suchte einen Freund_restoration_1777898774.json  analysis_Elke Best - Du wolltest nur ein Abenteuer, aber ich suchte einen Freund_restoration_1777913228.json  analysis_Elke Best - Du wolltest nur ein Abenteuer, aber ich suchte einen Freund_restoration_1779217698.json
audit/: CHAIN_AWARE_ORACLE_WORLDCLASS_AUDIT_2026-05-20.md  README.md  README_feedback_optimizer.md  SECURITY_AUDIT_SUMMARY.md  audit_api.py  audit_dashboard.py  audit_golden_case_vocal.py  audit_report_dashboard.py  audit_report_generator.py  bridge_import_status_dashboard.py  build_voice_first_audit_snapshot.py  build_voice_first_runtime_report.py  collect_report.py  compliance_output.txt  conduct_enforcer_decisions.json  consolidated_release_status.json  consolidated_release_status_voice_first_runtime.json  current_voice_first_audit.json  daily_real_audio_gate.py  feedback_optimizer.py  peer_review_feedback.json  performance_monitor.py  processing_report_generator.py  regression_monitor.py  release_check.py  release_must_test_trace.tsv  release_report.json  release_report_voice_first_runtime.json  release_report_voicefirst_ci.json  release_runtime_consistency.py  report_to_csv.py  runtime_spec_check.py  runtime_spec_report.json  runtime_spec_report_voice_first_runtime.json  runtime_spec_report_voicefirst_runtime.json  security_bandit_report.json  security_pip_audit_report.json  spec_compliance_scan_summary.md  spec_scan_output.txt  uat_report_generator.py  (+5 more)
backend/: README.md  __init__.py  _dsp_applier.py  adaptive_pipeline.py  artifact_detection_api.py  audio_monitor.py  aurik_backend_watchdog.sh  aurik_backend_watchdog_sota.sh  aurik_restore.py  aurik_system_check.py  batch_api.py  batch_run.py  batch_run_sota_chain.py  batch_sota_audio.py  batch_subagent.py  build_and_test.sh  carrier_forensics.py  carrier_ml_classifier.py  context_analysis.py  continuous_learning.py  deepfilternet_infer.py  error_notifier.py  ethics_engine.py  exporter.py  feature_analysis.py  file_import.py  logging_config.py  mastering.py  media_chain_detector.py  meta_router.py  monitoring.py  processing_pipeline_v8.py  processing_stubs.py  quality_control.py  quality_metrics_manager.py  region_analysis.py  sota_maximum_analyzer.py
benchmarks/: README.md  amrb_tape_afg_perphase_fix_20260406_234430.json  amrb_tape_after_afg_fix_20260406_232800.json  amrb_tape_after_fix_fast_20260406_222545.json  amrb_tape_after_phase06_shortclip_8s_20260406_224902.json  amrb_tape_fixA_stereo_collapse_20260407_043721.json  amrb_tape_fixB_perphase_min_20260407_045115.json  amrb_tape_fixD_nearmono_20260407_050819.json  amrb_tape_fixE_anticorr_20260407_051439.json  amrb_tape_fixF_threshold020_20260407_052027.json  baseline_validation_report.json  competitive_benchmark_v11.py  excellence_benchmark.py  golden_sample_baseline_report.json  musical_restoration_benchmark.py  regression_report_v1_v1.json  restoration_benchmark.py  run_amrb_baseline.py  sota_eval.py  test_dsp_performance.py  test_pipeline_performance.py
chain_templates/: broadcast_chain.py  digital_chain.py  tape_chain.py  vinyl_chain.py
cli/: README.md  aurik_cli.py
config/: README.md  class_c_revalidation_manifest.example.json  config_chain_cd.yaml  config_chain_combined_extreme.yaml  config_chain_extreme_clipping.yaml  config_chain_severe_crackle.yaml  config_chain_severe_hum.yaml  config_chain_severe_sibilance.yaml  config_chain_shellac.yaml  config_chain_tape.yaml  config_chain_vinyl.yaml  config_dsp_chain_example.yaml  config_model_selection.yaml  config_test1.json  config_test2.json  settings.py  worldclass_kpi_thresholds.json
configs/: docker-compose.yml  intermediate_exports.json  meta_router_output_schema.json  package-lock.json  package.json  policy_audit_check_report.json  prometheus.yml  pyproject.toml  setup.cfg
denker/: README.md  __init__.py  aurik_denker.py  cross_phase_coordinator.py  defekt_denker.py  exzellenz_denker.py  perceptual_council.py  phase_interaction_denker.py  rekonstruktions_denker.py  reparatur_denker.py  restaurier_denker.py  strategie_denker.py  tontraeger_denker.py  tontraegerkette_denker.py
docs/: 14_GOALS_CAMPAIGN_2026.md  AURIK_9.x.x_ARCHITEKTUR.md  AURIK_V10_ERKENNTNISSE.md  BACKEND_FRONTEND_WIRING_FIXES.md  CHANGELOG_HISTORY.md  CI_CD.md  COMPREHENSIVE_METRICS.md  DAILY_PROGRESS_20260216.md  DEFECT_SCANNER_SPEC.md  GUI_ENHANCEMENT_REPORT.md  INDEX.md  INTEGRATION_TESTING_RESULTS.md  KI-AGENT-INTEGRATION-GUIDE.md  KI_MODELS_COMPLETION_REPORT.md  MAGIC_BUTTONS_INTEGRATION.md  MAGIC_BUTTONS_SUMMARY.md  METRICS_COMPLETION_REPORT.md  ML_HYBRID_VALIDATION_REPORT.md  MODULAR_PHASES_API.md  MONITORING_SYSTEM.md  PERFORMANCE_GUARD_SPEC.md  PHASE_3B_VALIDATION_PLAN.md  PHASE_INTEGRATION_STATUS.md  PHASE_UPGRADE_PLAN.md  PROFESSIONAL_UPGRADES_WEEK1-2.md  PROFESSIONAL_UPGRADES_WEEK3-4.md  PROFESSIONAL_UPGRADES_WEEK5.md  PROFESSIONAL_UPGRADES_WEEK6.md  PROFESSIONAL_UPGRADES_WEEK7.md  PROGRAMMABLAUF_ANALYSE.md  PROJECT_STATUS.md  (+25 more)
(+1930 files in other folders)
