# =============================================================================
# pyproject.toml — Aurik 9 Code-Qualitäts-Konfiguration (SOTA, März 2026)
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurik9"
version = "9.15.0"
description = "Intelligentes Musik-Restaurierungssystem — weltweite Erstimplementierung"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Aurik Team" }]
urls = { "Homepage" = "https://github.com/aurik-audio/Aurik_Standalone", "Repository" = "https://github.com/aurik-audio/Aurik_Standalone", "Issues" = "https://github.com/aurik-audio/Aurik_Standalone/issues", "Changelog" = "https://github.com/aurik-audio/Aurik_Standalone/blob/main/CHANGELOG.md" }
keywords = [
    "audio",
    "music",
    "restoration",
    "DSP",
    "machine-learning",
    "psychoacoustics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools]
packages = ["backend", "cli", "dsp", "Aurik910", "plugins", "denker", "audit", "export", "usability", "benchmarks"]

# =============================================================================
# BLACK — Code-Formatierung
# =============================================================================
[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv_aurik
  | \.venv
  | build
  | dist
  | models
  | __pycache__
  | output_audio
  | sessions
  | logs
  | data
  | golden_samples
  | chain_templates
)/
'''

# =============================================================================
# ISORT — Import-Sortierung (kompatibel mit Black)
# =============================================================================
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    ".venv_aurik/*",
    "models/*",
    "build/*",
    "dist/*",
    "__pycache__/*",
    "output_audio/*",
    "sessions/*",
]
known_first_party = [
    "aurik_90",
    "Aurik910",
    "core",
    "backend",
    "dsp",
    "plugins",
    "frontend",
    "denker",
    "benchmarks",
    "forensics",
    "audit",
    "cli",
    "export",
    "processing",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true
combine_as_imports = true

# =============================================================================
# RUFF — Schneller Linter (ersetzt / ergänzt Flake8 + Pylint)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
exclude = [
    ".git",
    ".venv_aurik",
    ".venv",
    "build",
    "dist",
    "models",
    "__pycache__",
    "output_audio",
    "sessions",
    "logs",
    "data",
    "golden_samples",
    "chain_templates",
    "configs",
]

[tool.ruff.lint]
# Aktivierte Regelgruppen:
# E/W = pycodestyle, F = pyflakes, I = isort, N = pep8-naming,
# UP = pyupgrade, B = flake8-bugbear, C4 = flake8-comprehensions,
# SIM = flake8-simplify, TCH = flake8-type-checking, RUF = ruff-native
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    # Mit Black kompatibel — Leerzeichen-Formatierung Black überlassen
    "E203",
    # Zeilenlänge: durch Black geregelt
    "E501",
    # "Too many arguments" — Aurik-DSP-Funktionen legitim komplex
    "PLR0913",
    # Bare exception korrekt in DSP-Fallbacks (try/except ImportError)
    "BLE001",
    # f-string ohne Interpolation — Black löst das
    "RUF010",
    # Star-import in __init__.py erlaubt
    "F403",
    "F401",
    # Lambda-Zuweisung — kompatibel mit bestehendem Code
    "E731",
    # Unused loop variable — _ ist explizit
    "B007",
    # Ambiguous variable name (I = Iterator oft verwendet)
    "E741",
    # =========================================================================
    # Aurik-DSP-Spezifische Ausnahmen (bewusste Design-Entscheidungen)
    # =========================================================================
    # Deutschsprachige Unicode-Zeichen in Docstrings/Kommentaren/Strings
    # sind in Aurik 9 bewusst gesetzt (Nutzermeldungen, Kommentare auf Deutsch)
    "RUF001",
    "RUF002",
    "RUF003",
    # DSP-Konvention: Großbuchstaben für mathematische Variablen (N, X, Y, SR)
    "N806",
    # try/except-Import-Pattern für optionale ML-Dependencies (RELEASE_MUST)
    "E402",
    # Mutable class attributes als Klassenkonstanten/Konfiguration — bewusst
    "RUF012",
    # CamelCase-Import als Konstante (z.B. InferenceSession as IS) — DSP-Konvention
    "N814",
    # DSP-Argument-Namen: sr, N, X — Konvention in Audio-Algorithmen
    "N803",
    # zip() ohne strict= — bei len-garantierten Arrays in DSP kein Problem
    "B905",
    # Ternary-Stil: komplexe DSP-Bedingungen bleiben bei if/else-Schreibweise
    "SIM108",
    # warnings.warn ohne stacklevel — in DSP-Fallbacks akzeptabel
    "B028",
    # Collapsible if — manchmal klarer getrennt für Lesbarkeit
    "SIM102",
    # DSP-Funktionsnamen (Konvention für Algorithmen wie compute_rms, etc.)
    "N802",
    # lowercase-imported-as-non-lowercase — DSP-Aliasing z.B. np, sp, etc.
    "N812",
    # contextlib.suppress vs try/except — bekanntes Pattern, kein Refactoring
    "SIM105",
    # Modulnamen mit Unterstrichen (phase_03_denoise.py) — Aurik-Namenskonvention
    "N999",
    # typing.Dict/List/Tuple = Python 3.9+ deprecated, aber im Codebase als
    # Runtime-Typ verwendet (kein reines Annotation-Kontext), weiterhin valide
    "UP035",
    # open() ohne context manager — in fault-handler/long-lived resources bewusst
    "SIM115",
    # int(round(...)) Pattern — DSP-Konvention, ruff 0.15.x neu
    "RUF046",
    # __all__ unsortiert — bewusste Reihenfolge für API-Übersichtlichkeit
    "RUF022",
    # Unpacked unused variable — Pattern zur Ergodizität in DSP-Loops
    "RUF059",
    # Negate condition: `not x < y` → `return x >= y` — Lesbarkeit bewusst
    "SIM103",
    # f-string in logging: Logger f-strings in Aurik bewusst erlaubt
    "G004",
    # Ternary for raise — komplexe DSP-Bedingungen bleiben leserlicher
    "SIM117",
    # Return bool condition directly — manchmal expliziter lesbarer
    "SIM210",
    # enumerate() vs manual counter — in DSP-Loops direktes Indexing manchmal nötig
    "SIM113",
    # Use a dictionary instead of consecutive if — komplex bei Enum-Mappings
    "SIM116",
    # Useless if-else — bewusste Lesbarkeit bei komplexer Logik
    "RUF034",
    # Implicit Optional — in Aurik-DSP-Schnittstellen bewusst
    "RUF013",
    # key in dict.keys() — expliziter und leserlicher in manchen Kontexten
    "SIM118",
    # next(iter(x)) vs slice — Enum-Iterationen in Aurik-Spec-Code bewusst
    "RUF015",
]
fixable = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "C4",
    "SIM",
    "RUF",
]
unfixable = []
# Kompatibilität mit print() in bestimmten Skripten
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+_*)|dummy|unused|ignored)$"

[tool.ruff.lint.per-file-ignores]
# Test-Dateien: assert und direkte Importe erlaubt
"tests/**/*.py" = ["S101", "F401", "N802", "N803", "PLR2004", "E712", "F841", "B017", "B011", "B023", "C416", "B018", "SIM101", "SIM222", "SIM110", "RUF005", "RUF043"]
"test_*.py" = ["S101", "F401", "E712", "F841", "B018", "SIM101", "SIM222"]
# __init__.py: Wildcard-Importe erlaubt (Re-Exports)
"**/__init__.py" = ["F401", "F403"]
# Scripts: print() erlaubt
"scripts/**/*.py" = ["T201"]
"cli/aurik_cli.py" = ["T201"]
# Benchmarks: komplexe Logik erlaubt
"benchmarks/**/*.py" = ["PLR2004", "N806"]
# Migrations / Legacy-Code
"backend/processing_pipeline_v8.py" = ["ALL"]
# UI smooth-progress thread: _sp/_sp2/_sp_lock are intentional shared-state
# objects, not changing loop-iteration values → B023 false positive
"Aurik910/ui/modern_window.py" = ["B023"]
# DefectScanner loop closures: also intentional shared-state
"backend/core/defect_scanner.py" = ["B023"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pep8-naming]
# Klassenattribute in UPPER_CASE erlaubt (Aurik-Konstanten)
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MYPY — Statische Typprüfung
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false          # viele optionale Import-Ignore vorhanden
disallow_untyped_defs = false        # schrittweise einführen
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true        # optionale ML-Bibliotheken
no_implicit_optional = true
strict_optional = true
show_error_codes = true
exclude = [
    "build/",
    "dist/",
    ".venv_aurik/",
    "models/",
    "output_audio/",
    "sessions/",
    "logs/",
]

# Bekannte Drittanbieter ohne Stubs — ignorieren
[[tool.mypy.overrides]]
module = [
    "librosa.*",
    "soundfile.*",
    "scipy.*",
    "sklearn.*",
    "onnxruntime.*",
    "madmom.*",
    "crepe.*",
    "torch.*",
    "torchaudio.*",
    "pyloudnorm.*",
    "nara_wpe.*",
    "basic_pitch.*",
    "audiosr.*",
    "vocos.*",
    "demucs.*",
    "pydub.*",
]
ignore_missing_imports = true

# PyQt5-UI — Stubs-Lücken für Flags/Enums/Signals ignorieren
[[tool.mypy.overrides]]
module = [
    "Aurik910.ui.modern_window",
    "Aurik910.ui.*",
    "Aurik910.core.*",
]
ignore_errors = true

# ML-Plugins — ONNX-Session None-Attribute und ndarray-Any-Return (Stubs-Einschränkungen)
[[tool.mypy.overrides]]
module = [
    "plugins.apollo_plugin",
    "plugins.bigvgan_v2_plugin",
    "plugins.bs_roformer_plugin",
    "plugins.cqtdiff_plus_plugin",
    "plugins.diffwave_plugin",
    "plugins.laion_clap_plugin",
    "plugins.mdx23c_plugin",
    "plugins.utmos_plugin",
    "plugins.vocos_plugin",
]
ignore_errors = true

# Backend — carrier_forensics object-type Probleme
[[tool.mypy.overrides]]
module = [
    "backend.carrier_forensics",
    "backend.core.performance_guard",
]
ignore_errors = true

# phase_19: multi-line def override nicht suppressierbar via # type: ignore in mypy 1.x/2.x
[[tool.mypy.overrides]]
module = "backend.core.phases.phase_19_de_esser"
disable_error_code = ["override"]

# =============================================================================
# PYLINT — Erweiterte statische Analyse
# =============================================================================
[tool.pylint.main]
jobs = 4
recursive = true
ignore = [
    ".venv_aurik",
    "models",
    "build",
    "dist",
    "__pycache__",
    "output_audio",
    "sessions",
]
ignore-patterns = ["test_.*\\.py", "conftest\\.py", "setup\\.py"]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 1500
indent-string = "    "

[tool.pylint."messages control"]
disable = [
    # Design-Entscheidungen die akzeptabel sind:
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-lines",
    "too-many-return-statements",
    "too-many-nested-blocks",
    # Bekannte False-Positives in DSP/ML-Code:
    "import-error",          # optionale Imports via try/except
    "no-member",             # numpy/scipy dynamische Attribute
    "invalid-name",          # mathematische Variabelbezeichner (n, k, f0 etc.)
    "broad-exception-caught", # DSP-Fallbacks intentional
    "broad-exception-raised",
    # Stil-Entscheidungen die Black/isort übernehmen:
    "missing-module-docstring",
    "wrong-import-order",
    "ungrouped-imports",
    "fixme",                  # TODOs erlaubt
    # Performance-Optimierungen: später
    "consider-using-enumerate",
    "consider-using-dict-items",
]
enable = ["useless-suppression"]

[tool.pylint.design]
max-args = 12
max-attributes = 20
max-bool-expr = 8
max-branches = 20
max-locals = 25
max-parents = 10
max-public-methods = 30
max-returns = 8
max-statements = 60

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-imports = true
ignore-docstrings = true

# =============================================================================
# COVERAGE — Test-Abdeckung
# =============================================================================
[tool.coverage.run]
source = ["core", "dsp", "plugins", "backend", "denker"]
omit = [
    "tests/*",
    ".venv_aurik/*",
    "models/*",
    "scripts/*",
    "benchmarks/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",
]
